force-app/main/default/objects/Insurance_Verification__c/fields/Primary_Payer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Payer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Payer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Reimbursement Hotline - Payer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Insurance_Verifications</relationshipName>
    <type>Lookup</type>
</CustomField>