force-app/main/default/objects/Insurance_Verification__c/fields/Primary_Review_Denied_Other_Comment__c.field-meta.xml
<CustomField>
    <fullName>Primary_Review_Denied_Other_Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Review Denied-Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>