force-app/main/default/objects/Insurance_Verification__c/fields/PrimaryInsuranceCo_Patient_s_Last__c.field-meta.xml
<CustomField>
    <fullName>PrimaryInsuranceCo_Patient_s_Last__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Payer Patient&apos;s Last</label>
    <length>200</length>
    <type>Text</type>
</CustomField>