force-app/main/default/objects/Insurance_Verification__c/fields/PrimaryInsuranceCoPatient_s_DOB__c.field-meta.xml
<CustomField>
    <fullName>PrimaryInsuranceCoPatient_s_DOB__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Payer Patient’s DOB</label>
    <type>Date</type>
</CustomField>