force-app/main/default/objects/Insurance_Verification__c/fields/PrimaryInsuranceCoPatient_s_First__c.field-meta.xml
<CustomField>
    <fullName>PrimaryInsuranceCoPatient_s_First__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Payer Patient’s First</label>
    <length>200</length>
    <type>Text</type>
</CustomField>