force-app/main/default/objects/Insurance_Verification__c/fields/Prior_Auth_Appeal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Prior_Auth_Appeal_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prior Auth Appeal Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>