force-app/main/default/objects/Insurance_Verification__c/fields/Prior_Auth_Appeal_Contact_Last__c.field-meta.xml
<CustomField>
    <fullName>Prior_Auth_Appeal_Contact_Last__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prior Auth Appeal Contact Last</label>
    <length>200</length>
    <type>Text</type>
</CustomField>