force-app/main/default/objects/Insurance_Verification__c/fields/Prior_Auth_Appeal_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Prior_Auth_Appeal_Contact_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prior Auth Appeal Contact Phone</label>
    <type>Phone</type>
</CustomField>