force-app/main/default/objects/Insurance_Verification__c/fields/Prior_Auth_Appeal_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Prior_Auth_Appeal_Deadline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prior Auth Appeal Deadline</label>
    <length>200</length>
    <type>Text</type>
</CustomField>