force-app/main/default/objects/Insurance_Verification__c/fields/Prior_Auth_Appeal_Letter_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Prior_Auth_Appeal_Letter_Sent_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prior Auth Appeal Letter Sent Date</label>
    <type>Date</type>
</CustomField>