force-app/main/default/objects/Insurance_Verification__c/fields/Prior_Auth_Denial_Date__c.field-meta.xml
<CustomField>
    <fullName>Prior_Auth_Denial_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prior Auth Denial Date</label>
    <type>Date</type>
</CustomField>