force-app/main/default/objects/Insurance_Verification__c/fields/Prior_Auth_Denial_Reason__c.field-meta.xml
<CustomField>
    <fullName>Prior_Auth_Denial_Reason__c</fullName>
    <inlineHelpText>I/E – Inv/Exp (policy)
LMN – Lack of Medical Necessity (e.g., no cons care, radiculopathy)</inlineHelpText>
    <label>Prior Auth Denial Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
        </valueSetDefinition>
    </valueSet>
</CustomField>