force-app/main/default/objects/Insurance_Verification__c/fields/Prior_Auth_Initiate_Hold__c.field-meta.xml
<CustomField>
    <fullName>Prior_Auth_Initiate_Hold__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prior Auth Initiate Hold</label>
    <type>Date</type>
</CustomField>