force-app/main/default/objects/Insurance_Verification__c/fields/Prior_Authorization_Comments__c.field-meta.xml
<CustomField>
    <fullName>Prior_Authorization_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prior Authorization Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>