force-app/main/default/objects/Insurance_Verification__c/fields/Prior_Authorization_Contact__c.field-meta.xml
<CustomField>
    <fullName>Prior_Authorization_Contact__c</fullName>
    <formula>Prior_Authorization_Contact_First__c  &amp;  Prior_Authorization_Contact_Last__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prior Authorization Contact</label>
    <type>Text</type>
</CustomField>