force-app/main/default/objects/Insurance_Verification__c/fields/Prior_Authorization_Contact_Last__c.field-meta.xml
<CustomField>
    <fullName>Prior_Authorization_Contact_Last__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prior Authorization Contact Last</label>
    <length>90</length>
    <type>Text</type>
</CustomField>