force-app/main/default/objects/Insurance_Verification__c/fields/Prior_Authorization_Fax__c.field-meta.xml
<CustomField>
    <fullName>Prior_Authorization_Fax__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prior Authorization Fax</label>
    <type>Phone</type>
</CustomField>