force-app/main/default/objects/Insurance_Verification__c/fields/Prior_Authorization_Office_Number__c.field-meta.xml
<CustomField>
    <fullName>Prior_Authorization_Office_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prior Authorization Office Number</label>
    <type>Phone</type>
</CustomField>