force-app/main/default/objects/Insurance_Verification__c/fields/Prior_Authorization_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Prior_Authorization_Outcome__c</fullName>
    <label>Prior Authorization Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied - Experimental/Investigational</fullName>
            </value>
            <value>
                <fullName>Denied - Not Medically Necessary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>