force-app/main/default/objects/Insurance_Verification__c/fields/Prior_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Prior_Procedures__c</fullName>
    <label>Prior Procedures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACI</fullName>
            </value>
            <value>
                <fullName>Chondroplasty</fullName>
            </value>
            <value>
                <fullName>Microfracture</fullName>
            </value>
            <value>
                <fullName>OAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>