force-app/main/default/objects/Insurance_Verification__c/fields/Provider_Tax_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Provider_Tax_ID_Number__c</fullName>
    <formula>Surgeons_Name__r.Provider_Tax_ID_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider Tax ID Number</label>
    <type>Text</type>
</CustomField>