force-app/main/default/objects/Insurance_Verification__c/fields/Records_Received__c.field-meta.xml
<CustomField>
    <fullName>Records_Received__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Records Received</label>
    <type>Date</type>
</CustomField>