force-app/main/default/objects/Insurance_Verification__c/fields/Referral_Comments__c.field-meta.xml
<CustomField>
    <fullName>Referral_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>