force-app/main/default/objects/Insurance_Verification__c/fields/Referral_Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>Referral_Fax_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral Fax Number</label>
    <type>Phone</type>
</CustomField>