force-app/main/default/objects/Insurance_Verification__c/fields/Remaining_Deductible_Amount__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Deductible_Amount__c</fullName>
    <label>Remaining Deductible Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>