force-app/main/default/objects/Insurance_Verification__c/fields/Sec_Prior_Authorization_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Sec_Prior_Authorization_Contact_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sec-Prior Authorization Contact Name</label>
    <length>90</length>
    <type>Text</type>
</CustomField>