force-app/main/default/objects/Insurance_Verification__c/fields/Sec_Prior_Authorization_Office_Number__c.field-meta.xml
<CustomField>
    <fullName>Sec_Prior_Authorization_Office_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sec-Prior Authorization Office Number</label>
    <type>Phone</type>
</CustomField>