force-app/main/default/objects/Insurance_Verification__c/fields/Sec_Specialty_Pharmacy_Alternate_Office__c.field-meta.xml
<CustomField>
    <fullName>Sec_Specialty_Pharmacy_Alternate_Office__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sec-Specialty Pharmacy Alternate Office</label>
    <type>Phone</type>
</CustomField>