force-app/main/default/objects/Insurance_Verification__c/fields/Sec_Specialty_Pharmacy_Email__c.field-meta.xml
<CustomField>
    <fullName>Sec_Specialty_Pharmacy_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Specialty Pharmacy Email</label>
    <type>Email</type>
</CustomField>