force-app/main/default/objects/Insurance_Verification__c/fields/Sec_Specific_Specialty_Pharmacy_Comments__c.field-meta.xml
<CustomField>
    <fullName>Sec_Specific_Specialty_Pharmacy_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sec-Specific Specialty Pharmacy Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>