force-app/main/default/objects/Insurance_Verification__c/fields/Second_Level_Appeal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Second_Level_Appeal_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>2nd Level Appeal Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>