force-app/main/default/objects/Insurance_Verification__c/fields/Second_Level_Appeal_Contact_Last__c.field-meta.xml
<CustomField>
    <fullName>Second_Level_Appeal_Contact_Last__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>2nd Level Appeal Contact Last</label>
    <length>200</length>
    <type>Text</type>
</CustomField>