force-app/main/default/objects/Insurance_Verification__c/fields/Second_Level_Appeal_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Second_Level_Appeal_Contact_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>2nd Level Appeal Contact Phone</label>
    <type>Phone</type>
</CustomField>