force-app/main/default/objects/Insurance_Verification__c/fields/Second_Level_Appeal_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Second_Level_Appeal_Deadline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>2nd Level Appeal Deadline</label>
    <type>Date</type>
</CustomField>