force-app/main/default/objects/Insurance_Verification__c/fields/Secondary__c.field-meta.xml
<CustomField>
    <fullName>Secondary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secondary Prior Authorization-Office</label>
    <type>Checkbox</type>
</CustomField>