force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Approval_Number__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Approval_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary- Approval Number</label>
    <length>90</length>
    <type>Text</type>
</CustomField>