force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Coinsurance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Coinsurance_Amount__c</fullName>
    <label>Secondary Coinsurance Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>