force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Coverage_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Coverage_Termination_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Coverage Termination Date</label>
    <type>Date</type>
</CustomField>