force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Effective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Effective Date</label>
    <type>Date</type>
</CustomField>