force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Insurance_Co_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Insurance_Co_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Insurance Co Name</label>
    <length>90</length>
    <type>Text</type>
</CustomField>