force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Insurance_Co_Subscriber_Last__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Insurance_Co_Subscriber_Last__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Insurance Co Subscriber Last</label>
    <length>90</length>
    <type>Text</type>
</CustomField>