force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Office_Notified__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Office_Notified__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Office Notified</label>
    <type>Date</type>
</CustomField>