force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Other__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Other__c</fullName>
    <label>Secondary Other Out-Of-Pocket Expense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>