force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Out_of_Network_Coinsurance_Amt__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Out_of_Network_Coinsurance_Amt__c</fullName>
    <label>Secondary Out-of-Network Coinsurance Amt</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>