force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Out_of_Network_Deductible_Amt__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Out_of_Network_Deductible_Amt__c</fullName>
    <label>Secondary Out-of-Network Deductible Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>