force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Outcome__c</fullName>
    <label>Secondary Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Unable to Determine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>