force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Outcome_Comments__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Outcome_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Outcome Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>