force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Payer_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Payer_Group_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Payer Group Number</label>
    <length>90</length>
    <type>Text</type>
</CustomField>