force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Payer_Patient_s_DOB__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Payer_Patient_s_DOB__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Payer Patient’s DOB</label>
    <type>Date</type>
</CustomField>