force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Payer_Patient_s_Last__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Payer_Patient_s_Last__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Payer Patient’s Last</label>
    <length>200</length>
    <type>Text</type>
</CustomField>