force-app/main/default/objects/Insurance_Verification__c/fields/Secondary_Payer_Subscriber_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Payer_Subscriber_Relationship__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Payer Subscribers Relationship</label>
    <length>90</length>
    <type>Text</type>
</CustomField>